# Graphics-Samples

./: .gitignore  CMakeLists.txt  LICENSE  README.md  make.bat
.github/workflows/: build.yml
BuildFiles/Win/: getdep.ps1  parse_arguments.cmd  reset_arguments.cmd
Script/: generate_shaders.py
Scripts/: generate_spirv.py  get_dependencies.py
Src/Basic/: CMakeLists.txt  README.md
Src/Basic/1-EmptyWindow/: CMakeLists.txt  README.md  d3d12.cpp  main.cpp  sample.h
Src/Basic/1-EmptyWindow/d3d12/: d3d12_impl.cpp  d3d12_impl.h
Src/Basic/1-EmptyWindow/vulkan/: vulkan_impl.cpp  vulkan_impl.h
Src/Basic/2-SingleTriangle/: CMakeLists.txt  README.md  main.cpp  sample.h
Src/Basic/2-SingleTriangle/common/: common.h
Src/Basic/2-SingleTriangle/d3d12/: d3d12_impl.cpp  d3d12_impl.h
Src/Basic/2-SingleTriangle/d3d12/shaders/: ps.hlsl  vs.hlsl
Src/Basic/2-SingleTriangle/vulkan/: vulkan_impl.cpp  vulkan_impl.h
Src/Basic/2-SingleTriangle/vulkan/shaders/: ps.frag.glsl  vs.vert.glsl
